# Basedev

./: .env.example  .gitignore  README.md
.claude/agents/: backend-api.md  ci-cd-specialist.md  cro-analyst.md  engineer.md  frontend-ui.md  high-fidelity-developer.md  infra-specialist.md  orchestrator.md  peer-reviewer.md  ponytail-reviewer.md  pr-reviewer.md  product-owner.md  prompt-architect.md  qa-engineer.md  requirements-engineer.md  salespage-specialist.md
.claude/commands/: orchestrate.md  po.md
.claude/skills/: ATTRIBUTION.md
.cursor/: mcp.json
.cursor/rules/: ai-guidelines.mdc  code-style.mdc  contributing.mdc  documentation.mdc
_ops-template/: HANDOVER.md  INDEX.md  README.md
_ops-template/00-GOVERNANCE/: README.md
_ops-template/01-SALES_OUTREACH/: README.md
_ops-template/02-CLIENT_MANAGEMENT/: README.md
_ops-template/03-AGENTIC_SYSTEM/: README.md
_ops-template/04-INFRASTRUCTURE/: README.md
mcps/: README.md
templates/: README.md
templates/webapp-nextjs-fastapi/backend/: .env.example  Dockerfile  pyproject.toml
templates/webapp-nextjs-fastapi/backend/app/: main.py
templates/webapp-nextjs-fastapi/backend/app/adapters/: README.md
templates/webapp-nextjs-fastapi/backend/app/api/: router.py
templates/webapp-nextjs-fastapi/backend/app/core/: config.py
templates/webapp-nextjs-fastapi/backend/app/db/: base.py  session.py
templates/webapp-nextjs-fastapi/backend/app/domain/: README.md
templates/webapp-nextjs-fastapi/backend/migrations/: README.md
templates/webapp-nextjs-fastapi/backend/tests/: test_health.py
(+55 files in other folders)
