[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
]
[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.8"]

[tool.ruff]
line-length = 100
